tick to config & worldChange "fix"
- some ticks are now configurable
- a bandaid fix for the worldChange bug

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,6 +17,11 @@ bg:
 shadow: true
 viewRange: 16
 
+# Some tick updates | Only change this if you know what you're doing.
+tick:
+  update: 2
+  movement: 4
+
 opacity:
   # Value range: 0-1
   default: 1
