--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,14 @@
 
     <groupId>me.lukiiy</groupId>
     <artifactId>ChatDisplay</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <packaging>jar</packaging>
 
     <name>chatdisplay</name>
 
     <properties>
         <java.version>21</java.version>
-        <kotlin.version>2.1.20-RC2</kotlin.version>
+        <kotlin.version>2.2.0</kotlin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
